Fix painting layer styles in Inherit Alpha mode

The layer style projections (KisMultipleProjection) should be painted
into the final stack using the blending mode selected by the user.

BUG:354376